fix: style of collapse handle for task-list-item

--- a/html/css/markdown-nodes.css
+++ b/html/css/markdown-nodes.css
@@ -202,7 +202,7 @@ ol > li > label > span.fa-caret-right {
 li.task-list-item {
   list-style-type: none;
   position: relative;
-  padding-left: 7px;
+  padding-left: 10px;
 }
 
 li.task-list-item::marker {
@@ -228,7 +228,7 @@ li.task-list-item:hover label.collapse > span {
   transition: all 0.2s ease-in-out;
 }
 
-li.task-list-item[data-collapsed='true'] > label > span {
+li.task-list-item[data-collapsed='true'] > label.collapse > span {
   visibility: visible;
 } 
 
@@ -236,7 +236,7 @@ li.task-list-item > label.collapse:hover > span {
   color: rgba(76, 86, 106, 0.90); 
 }
 
-li > label.collapse > span.fa-caret-right {
+li.task-list-item > label.collapse > span.fa-caret-right {
   margin-left: 1px;
   margin-top: 0px;
   transition: all 0.2s ease-in-out;
